<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/linen"
        android:padding="8dp"
        tools:context=".MyProfileActivity">
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
        <androidx.recyclerview.widget.RecyclerView
                android:layout_alignParentTop="true"
                android:layout_marginBottom="1dp"
                android:dividerHeight="2pt"
                android:drawSelectorOnTop="true"
                android:id="@+id/myImagesListView"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
        <com.rbrooks.indefinitepagerindicator.IndefinitePagerIndicator
                android:id="@+id/myPagesIndicator"
                android:layout_below="@+id/myImagesListView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:dotColor="#ff0000"
                app:dotRadius="4dp"
                app:selectedDotRadius="5dp"
                app:selectedDotColor="@color/blue"
        />
        <LinearLayout
                android:layout_below="@+id/myPagesIndicator"
                android:layout_marginTop="4dp"
                android:id="@+id/editLayout"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:id="@+id/btnEditProfileImages"
                    android:text="Change Photos"
                    android:background="@drawable/mainbtn_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginEnd="2dp"
                    android:layout_height="30dp"
                    android:drawableStart="@drawable/gallery"/>
            <Button
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:id="@+id/btnEditProfile"
                    android:text="@string/edit_profile"
                    android:background="@drawable/mainbtn_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="2dp"
                    android:layout_height="30dp"
                    android:drawableStart="@drawable/edit_profile"/>
        </LinearLayout>

        <LinearLayout
                android:id="@+id/viewsLikesLayout"
                android:layout_below="@+id/editLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:id="@+id/btnMyLikes"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginEnd="1dp"
                    android:background="@drawable/user_profile_bg"
                    android:textAllCaps="false"
                    android:text=""
                    android:drawableLeft="@drawable/like"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/like"
                    android:layout_marginRight="1dp"/>
            <Button
                    android:id="@+id/btnMyViews"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginStart="1dp"
                    android:layout_marginLeft="1dp"
                    android:background="@drawable/user_profile_bg"
                    android:textAllCaps="false"
                    android:text=""
                    android:drawableLeft="@drawable/eye"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/eye"
                    tools:ignore="UnusedAttribute"/>
        </LinearLayout>
        <TextView
                android:padding="8dp"
                android:layout_below="@+id/viewsLikesLayout"
                android:textSize="14sp"
                android:textStyle="bold"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_gravity="center"
                android:text="Bio"
                android:id="@+id/tvUserBioTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:layout_below="@+id/tvUserBioTitle"
                android:padding="12dp"
                android:textSize="13sp"
                android:textStyle="normal"
                style="@style/TextAppearance.AppCompat.Small"
                android:layout_gravity="center"
                android:text=""
                android:id="@+id/tvMyBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout
                android:padding="8dp"
                android:background="@color/white"
                android:layout_below="@+id/tvMyBio"
                android:id="@+id/rechargeLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:padding="4dp"
                    android:id="@+id/tvAccountStatus"
                    android:text=""
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
                android:layout_below="@+id/rechargeLayout"
                android:id="@+id/accountBtnsLayout"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    android:drawableLeft="@drawable/cash"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:id="@+id/btnRecharge"
                    android:text="@string/recharge_account"
                    android:background="@drawable/mainbtn_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="2dp"
                    android:drawableStart="@drawable/cash"/>
            <Button
                    android:layout_marginStart="2dp"
                    android:drawableLeft="@drawable/changeaccount"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:id="@+id/btnChangeAccountType"
                    android:text="Upgrade to VIP"
                    android:background="@drawable/mainbtn_bg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:layout_height="48dp"
                    android:layout_marginBottom="8dp"
                    android:drawableStart="@drawable/changeaccount"/>


        </LinearLayout>

        <Button
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/email"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:layout_below="@+id/accountBtnsLayout"
                android:textAllCaps="false"
                android:id="@+id/btnEditEmail"
                android:text="@string/setup_recovery_email"
                android:background="@drawable/mainbtn_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/email"/>

        <Button
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/deleteaccount"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/black"
                android:layout_below="@+id/btnEditEmail"
                android:textAllCaps="false"
                android:id="@+id/btnRemoveAccount"
                android:text="Delete Account"
                android:background="@drawable/mainbtn_bg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:drawableStart="@drawable/deleteaccount"/>

       <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/bannerAdUnit">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</ScrollView>