<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:mapbox="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".MainActivity">

   <LinearLayout
           android:background="@android:color/transparent"
           android:orientation="vertical"
           android:layout_width="match_parent"
                 android:layout_height="match_parent">

   </LinearLayout>


    <Button
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:layout_marginTop="2dp"
            android:background="@android:color/transparent"
            android:layout_gravity="bottom"
            android:text=""
            android:layout_marginBottom="72dp"
            android:id="@+id/btnLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <RelativeLayout
            android:layout_gravity="top|start"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_marginTop="1dp"
            android:background="@color/white"
            android:padding="0dp"
            android:layout_marginBottom="1dp"
            android:id="@+id/usersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:layout_alignParentTop="true"
                android:orientation="horizontal"
                android:id="@+id/topUsersLayout"
                android:padding="1dp"
                android:background="@color/aliceBlue"
                android:layout_width="match_parent"
                android:layout_height="84dp">
            <Button
                    android:visibility="visible"
                    android:id="@+id/btnBeHere"
                    android:textColor="@color/black"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:textAllCaps="false"
                    android:background="@drawable/btnspot_bg"
                    android:text="Be\nClassic"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />
            <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginBottom="4dp"
                    android:dividerHeight="1pt"
                    android:visibility="visible"
                    android:drawSelectorOnTop="true"
                    android:id="@+id/topUsersListView"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_marginBottom="1dp"
                android:orientation="horizontal"
                android:layout_below="@+id/topUsersLayout"
                android:id="@+id/actionBtnsLayout"
                android:layout_width="match_parent"
                android:layout_height="30dp">
                <Button
                        android:id="@+id/btnAll"
                        android:focusable="true"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:layout_marginEnd="1dp"
                        android:background="@color/white"
                        android:textColor="@color/tmColor"
                        android:textAllCaps="false"
                        android:text="All"
                        android:textSize="11sp"
                        tools:ignore="SmallSp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="30dp"/>
            <Button
                    android:id="@+id/btnOnline"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginEnd="1dp"
                    android:background="@color/white"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"
                    android:text="Online"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"/>
            <Button
                    android:id="@+id/btnNew"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_marginEnd="1dp"
                    android:background="@color/white"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"
                    android:text="New"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"/>
            <Button
                    android:id="@+id/btnClassic"
                    android:focusable="true"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:background="@color/white"
                    android:textColor="@color/blue"
                    android:textAllCaps="false"
                    android:text="Classic"
                    android:textSize="11sp"
                    tools:ignore="SmallSp"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="30dp"/>
        </LinearLayout>



        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:layout_below="@+id/actionBtnsLayout"
                android:layout_alignParentTop="false"
                android:id="@+id/swipeRefreshUsers"
                android:layout_width="match_parent"
                android:layout_marginBottom="54dp"
                android:layout_height="wrap_content">

          <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginBottom="1dp"
                    android:dividerHeight="2pt"
                    android:visibility="visible"
                    android:drawSelectorOnTop="true"
                    android:id="@+id/usersListView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>



        <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adViewMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/bannerAdUnit">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>

    <LinearLayout
            android:layout_gravity="top|start"
            android:visibility="gone"
            android:orientation="horizontal"
            android:id="@+id/changeLocaLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:drawableLeft="@drawable/locat2"
                android:paddingLeft="4dp"
                android:background="@drawable/edit_bg"
                android:hint="@string/search_location"
                android:id="@+id/editLocation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:imeOptions="actionSearch"
                android:layout_marginRight="2dp"
                android:layout_height="40dp"
                android:paddingStart="4dp"
                android:layout_marginEnd="2dp"
                tools:ignore="RtlSymmetry"
                android:inputType="text"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/locat2"/>
        <Button
                android:focusable="true"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:drawableLeft="@drawable/search"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btnsmall_bg"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textSize="12sp"
                android:text="@string/search"
                android:id="@+id/btnSearch"
                android:onClick="searchLocation"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:drawableStart="@drawable/search"/>
    </LinearLayout>



    <Button
            android:layout_marginBottom="90dp"
            android:text="Back"
            android:textColor="@color/black"
            android:textAllCaps="false"
            android:visibility="gone"
            android:id="@+id/btnBack"
            android:onClick="showUsersLayout"
            android:layout_marginEnd="3dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/back2"
            android:layout_gravity="bottom|end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="3dp"
            tools:ignore="RtlHardcoded"/>
    <RadioGroup
            android:visibility="gone"
            android:id="@+id/layoutGender"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="top|end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton android:id="@+id/radio_female"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Female"
                     android:onClick="onGenderRadioButtonClicked"
                     />
        <RadioButton android:id="@+id/radio_male"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Male"
                     android:onClick="onGenderRadioButtonClicked"
                    />
    </RadioGroup>
</FrameLayout>

